Add GitHub repository link and update copyright year to 2025

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D防水维修可视化项目 - 模型库</title>
+  <title>WaterproofViz3D - 3D防水维修可视化项目</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <script type="importmap">
     {
       "imports": {
@@ -185,6 +186,36 @@
       margin-top: 3rem;
     }
 
+    .github-link {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+    }
+
+    .github-link a {
+      color: white;
+      text-decoration: none;
+      background-color: rgba(0, 0, 0, 0.3);
+      padding: 0.4rem 1rem;
+      border-radius: 20px;
+      display: inline-flex;
+      align-items: center;
+      transition: background-color 0.3s ease;
+    }
+
+    .github-link a:hover {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    footer a:hover {
+      color: var(--primary-color);
+    }
+
     @media (max-width: 768px) {
       .gallery {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -273,8 +304,9 @@
 
   <header>
     <div class="container">
-      <h1>3D防水维修可视化项目</h1>
-      <p class="subtitle">模型库 - 探索各种3D防水维修模型</p>
+      <h1>WaterproofViz3D</h1>
+      <p class="subtitle">3D防水维修可视化项目 - 探索各种3D防水维修模型</p>
+      <p class="github-link"><a href="https://github.com/franksunye/WaterproofViz3D" target="_blank"><i class="fab fa-github"></i> 在GitHub上查看源代码</a></p>
     </div>
   </header>
 
@@ -398,7 +430,7 @@
 
   <footer>
     <div class="container">
-      <p>© 2023 3D防水维修可视化项目 | 所有权利保留</p>
+      <p>© 2025 WaterproofViz3D | <a href="https://github.com/franksunye/WaterproofViz3D" target="_blank"><i class="fab fa-github"></i> GitHub</a> | 所有权利保留</p>
     </div>
   </footer>
 
